--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                     <td width="250 px"><a href="">Gulab Jamun  <span>(serve 1-2)</span></a></td>
                     <td>$3</td> 
                 </tr>
+                <tr>
+                    <td width="250 px"><a href="">Gulab Jamun  <span>(serve 1-2)</span></a></td>
+                    <td>$9</td> 
+                </tr>
                 
             </table>
             
